# cdk-workshop-python

./: .flake8  .gitignore  .isort.cfg  .pylintrc  Makefile  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  main.yml
cdk_workshop/: cdk_sec_stack.py  cdk_sns_stack.py  cdk_workshop_stack.py  hitcounter.py
lambda/: hitcount.py  parent.py
lambda/layers/boto3Layer/jmespath-1.0.1.dist-info/: RECORD
lambda/layers/pandasLayer/numpy-1.23.4.dist-info/: RECORD
lambda/sec/: retrieve_company_tickers_exchange.py  upgrade_in_dynamodb_company_facts.py
tests/unit/: test_cdk_workshop_stack.py
